<resources>
    <string name="app_name">Recipe Manager</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="greetings1">Thank you for using</string>
    <string name="greetings2">Recipe Manager 😋</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="more_options">More</string>
    <string name="search">Search</string>
    <string name="add_recipe_icon">Recipe Icon</string>
    <string name="forward">Forward</string>
    <string name="recipe_title">Recipe title</string>
    <string name="recipe_time">Time</string>
    <string name="recipe_difficulty">Difficulty</string>
    <string name="recipe_description">Description</string>
    <string name="user_profile_picture">User profile</string>
    <string name="username">Username</string>
    <string name="bio">Biography</string>
    <string name="gender">Gender</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="birthdate">Date of birth</string>
    <string name="save">Save</string>
    <string name="steps_list">Steps</string>
    <string name="step">Step</string>
    <string name="timer">Timer (in minuti)</string>
    <string name="add_step">Add step</string>
    <string name="edit_steps">Edit step</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="account_privacy">Account privacy (to be implemented)</string>
    <string name="sync_data">Sync data (to be implemented)</string>
    <string name="pasta">Pasta</string>
    <string name="pesce">Fish</string>
    <string name="pizza">Pizza</string>
    <string name="burger">Burger</string>
    <string name="dolci">Dessert</string>
    <string name="veggie">Veggie</string>
    <string name="sushi">Sushi</string>
    <string name="carne">Meat</string>
    <string name="choose_icon">Icons</string>
    <string name="icon">Icon</string>
    <string name="modify_recipe">Modify recipe</string>
    <string name="modify_steps">Modify steps</string>
    <string name="modify_step">Modify step</string>
    <string name="delete">Delete</string>
    <string name="finish">Finish</string>
</resources>