<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserActivity">

    <!-- CIRCULAR USE IMAGE -->
    <ImageButton
        android:id="@+id/imgButtonProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/user_profile_picture"
        android:scaleType="centerInside"
        android:src="@drawable/ic_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="24dp"/>

    <!-- USERNAME -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/imgButtonProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- BIO multiline -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/bio"
        app:layout_constraintTop_toBottomOf="@id/tilUsername"
        app:layout_constraintStart_toStartOf="@id/tilUsername"
        app:layout_constraintEnd_toEndOf="@id/tilUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:maxLines="4"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- GENERE -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/gender"
        app:endIconMode="dropdown_menu"
        app:layout_constraintTop_toBottomOf="@id/tilBio"
        app:layout_constraintStart_toStartOf="@id/tilBio"
        app:layout_constraintEnd_toEndOf="@id/tilBio">

        <AutoCompleteTextView
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:entries="@array/gender_options"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


    <!-- Bottom Bar -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/bottomBarCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        android:backgroundTint="@color/top_bottom_bar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home"
                android:src="@drawable/ic_home"
                android:backgroundTint="@color/buttons"
                app:tint="@color/white"
                app:elevation="0dp"
                app:maxImageSize="32dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_recipe"
                android:src="@drawable/ic_add"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:backgroundTint="@color/buttons"
                app:tint="@color/white"
                app:elevation="0dp"
                app:maxImageSize="65dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_settings"
                android:backgroundTint="@color/buttons"
                app:tint="@color/white"
                app:elevation="0dp"
                app:maxImageSize="32dp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>