<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GreetingsActivity">

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- GREETINGS -->
        <TextView
            android:id="@+id/tv_greeting1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greetings1"
            android:textSize="24sp"
            android:textStyle="normal"
            android:fontFamily="@font/baloo_chettan"/>

        <TextView
            android:id="@+id/tv_greeting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greetings2"
            android:textSize="24sp"
            android:textStyle="normal"
            android:fontFamily="@font/baloo_chettan"
            android:layout_marginBottom="32dp"/>

        <ImageButton
            android:id="@+id/img_button_github"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_github"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"/>
    </LinearLayout>

    <!-- FLOATING ACTION BUTTON -> HOME-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_home"
        android:contentDescription="@string/home"
        android:backgroundTint="?attr/colorSurface"
        app:tint="?attr/colorOnSurface"
        app:elevation="4dp"/>

</FrameLayout>